<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:background="@color/background_color">

        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/nav_terms"
            android:checked="false"
            />

        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_baseline_meeting_room_24"
            android:title="@string/nav_courses"/>


        <item
            android:id="@+id/nav_assessments"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/nav_assessments"/>

        <item
            android:title="@string/search_options">
            <menu>
                <item
                    android:id="@+id/nav_search_notes"
                    android:title="@string/nav_search_notes"
                    android:icon="@drawable/ic_search_24"/>
                <item
                    android:id="@+id/nav_search_assessments"
                    android:title="@string/nav_search_assessments"
                    android:icon="@drawable/ic_search_24"/>
            </menu>

        </item>

</group>

    <item
        android:id="@+id/close_app"
        android:title="@string/close_app"
        android:icon="@drawable/ic_baseline_close_24" />

</menu>