<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Add options -->
    <item
        android:id="@+id/course_details_sub_menu"
        android:title="@string/course_details_add_assessment_notes"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:icon="@drawable/ic_more_vert_white_24">
        <menu>
            <item
                android:id="@+id/course_details_add_assessment"
                android:title="@string/course_details_add_assessment" />
            <item
                android:id="@+id/course_details_add_notes"
                android:title="@string/course_details_add_notes" />
        </menu>
    </item>

    <!-- Help -->
    <item android:id="@+id/help_course_details"
        android:title="@string/term_help"
        android:icon="@drawable/ic_help_24"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

</menu>