<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".UI.AddNotificationActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_notification_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/colorAccent" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/add_color"
        android:columnCount="8"
        android:orientation="horizontal">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:padding="@dimen/cell_padding"
            android:text="@string/start_date"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/add_term_text_size_portrait" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/error_start_date"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_margin="5dp">

            <EditText

                android:id="@+id/course_notification_start_date_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnSpan="3"
                android:hint="@string/add_course_start_date_hint"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/add_term_text_size_portrait"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_start_notification_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="4"
            android:background="@color/color_button_background"
            android:textColor="@color/color_button_text"
            android:text="@string/notification_set_start_date" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:padding="@dimen/cell_padding"
            android:text="@string/end_date"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/add_term_text_size_portrait" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/error_end_date"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_row="2"
            android:layout_margin="5dp">

            <EditText

                android:id="@+id/course_notification_end_date_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnSpan="3"
                android:hint="@string/add_course_end_date_hint"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/add_term_text_size_portrait"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_end_notification_button"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="4"
            android:background="@color/color_button_background"
            android:text="@string/notification_set_end_date"
            android:textColor="@color/color_button_text"/>

    </GridLayout>

</LinearLayout>