<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".UI.AddAssessmentActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_assessment_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/colorAccent" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:columnCount="7"
        android:background="@color/add_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:padding="5dp"
            android:text="@string/add_assessment_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/add_term_text_size_portrait" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/error_assessment_edit_title"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_row="1"
            android:layout_margin="5dp">


        <EditText
            android:id="@+id/add_assessment_title_details_tv"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="206dp"
            android:layout_height="51dp"
            android:layout_row="1"
            android:layout_column="1"
            android:hint="@string/add_assessment__Title_prompt"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/add_term_text_size_portrait" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:padding="5dp"
            android:text="@string/add_assessment_start_date"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/add_term_text_size_portrait" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/error_assessment_start_date"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_row="2"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/add_assessment_start_date_actual_tv"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="208dp"
                android:layout_height="76dp"
                android:layout_row="2"
                android:layout_column="1"
                android:hint="@string/add_assessment_start_date_hint"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/add_term_text_size_portrait" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:padding="@dimen/cell_padding"
            android:text="@string/add_assessment_end_date"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/add_term_text_size_portrait" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/error_assessment_end_date"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_row="3"
            android:layout_margin="5dp">

        <EditText
            android:id="@+id/add_assessment_end_date_actual_tv"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="205dp"
            android:layout_height="77dp"
            android:layout_row="3"
            android:layout_column="1"
            android:hint="@string/add_assessment_end_date_hint"
            android:padding="@dimen/cell_padding"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/add_term_text_size_portrait" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:padding="@dimen/cell_padding"
            android:text="@string/add_assessment_type"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/add_term_text_size_portrait" />


        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"/>

    </GridLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_assessment_fab"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_save_24"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|right|end" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_assessment_notification_fab"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_edit_calendar_24"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|right|end" />

</LinearLayout>